# ComfyUI-Save-Separate-Metadata

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
web/: separate_meta_dnd.js
